feat: add 1.16 module (oldest stable) + common Java8 target
- mod-1_16: first legacy version via loom.officialMojangMappings
- common: retarget to Java 8 so all versions can depend on it
- ConfigManager: Java 8 compatible file IO
- 1.16 differences: TranslatableComponent, displayClientMessage,
  player.chat, KeyMapping string category, keybinding.v1 package